# Tinybase

./: Dockerfile  README.md  core.db  data.db  logs.db  logs.db-shm  logs.db-wal  system.db
logs/: tinybase.log.2025-12-19
sandboxes/session_18f36830-d96c-4dfe-954e-b73078195866/: core.db  data.db  logs.db  logs.db-shm  logs.db-wal  system.db
sandboxes/session_d5eed5bb-a3ec-4ba3-801f-50028887d9f2/: logs.db  system.db
tantivy_indexes/1/: .managed.json  meta.json
tantivy_indexes/1_v2_fuzzy/: .managed.json  meta.json
tenants/app-1/: core.db  data.db  logs.db  system.db  vectors.db
tenants/app-1/indexes/1/: .managed.json  meta.json
tinybase/: .gitignore  Cargo.toml
tinybase/docs/: development_guide.md
tinybase/tinybase-api/: Cargo.toml
tinybase/tinybase-api/src/: lib.rs  main.rs
tinybase/tinybase-api/tests/: collections.rs  common.rs  records.rs
tinybase/tinybase-core/: Cargo.toml
tinybase/tinybase-core/src/: lib.rs  models.rs  schema.rs  validation.rs
