[package]
name = "tinybase-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = { version = "0.9.29", features = ["replication"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
async-trait = "0.1.80"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.59"
